# autobot

./: .gitignore  Cargo.toml  README.md  TODO  autobot_logs.txt  build.rs  language.txt  z.txt
autobot_daemon/: Cargo.toml  autobot_shortcuts.json
autobot_daemon/src/: main.rs
autobot_daemon/src/shortcuts/: mod.rs
data/: a.ab  shortcut_test.ab  test.ab  test2.ab  test3.ab
data/output/: out.rs
scripts/: remove.ps1  restart.ps1  setup.ps1  test.sh
src/: _oldexecutor.rs  analyzer.rs  compile.rs  compiler.rs  compiler_to_rust.rs  config.rs  executor.rs  main.rs  old_analyzer.rs  parser.rs  symbol_table.rs  types.rs  value.rs
src/analyzer/: error.rs  expr.rs  factor.rs  shortcut.rs  statement.rs  term.rs
src/analyzer/factor/: factor.rs  literal.rs
src/compiler/: compiler_to_rust.rs  mod.rs
src/daemon/: mod.rs  service_windows.rs
src/logger/: mod.rs
src/parser/: mod.rs  shortcut.rs  string_parser.rs  unicode_string_parser.rs
src/runtime/: input_utill.rs  keyboard.rs  keyword.rs  mod.rs  types.rs  value.rs
src/runtime/operator/: expr_op.rs  mod.rs
src/shortcuts/: mod.rs  register.rs
src/shortcuts_map/: mod.rs
test/: abc.txt
