[package]
name = "autobot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
open = "3.2.0"
windows= { version = "0.44.0", features =["Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation","Win32_UI_WindowsAndMessaging"]}
serde_json = "1.0.94"
serde_with = "2.2.0"
serde = "1.0.152"
windows-service="0.6.0"
